--- a/src/components/ProductInfo/style.module.css
+++ b/src/components/ProductInfo/style.module.css
@@ -13,6 +13,7 @@
 }
 .item img{
     width: 100%;
+    max-width: 700px;
     height: 100%;
     object-fit: contain;
     border-radius: 20px;
@@ -21,6 +22,7 @@
     display: flex;
     flex-direction: column;
     gap: 40px;
+    max-width: 500px;
 }
 .price{
     display: flex;
